--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ chromadb==0.4.14
 click==8.1.7
 coloredlogs==15.0.1
 dataclasses-json==0.6.1
+faiss-cpu==1.7.4
 fastapi==0.103.2
 filelock==3.12.4
 flatbuffers==23.5.26
@@ -99,4 +100,3 @@ watchfiles==0.21.0
 websockets==11.0.3
 yarl==1.9.2
 zipp==3.17.0
-sqlite3 == 3.36.0
